[package]
name = "runners-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.27"
chrono = "0.4"

[lib]
name = "runners_toolkit"
path = "src/lib.rs"

[[bin]]
name = "runners-cli"
path = "src/cli/main.rs"

[[bin]]
name = "runners-fetcher"
path = "src/fetcher/main.rs"

