[package]
name = "runners-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"]}
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"

[dev-dependencies]
clickhouse = { version = "0.12.2", features = ["test-util"] }

[lib]
name = "runners_toolkit"
path = "src/lib.rs"

[[bin]]
name = "runners-cli"
path = "src/cli/main.rs"

[[bin]]
name = "runners-fetcher"
path = "src/fetcher/main.rs"

